@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.408 2005/10/09 05:48:18 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.409 2005/10/09 17:42:24 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
+
+  10 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/ProfileHandler.py, handler.py, gliserv.py:
+  main server now loads separate module to handle requests
+  split out profile URLs into separate handler function
 
   9 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
